{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "aeabc1fb-db52-42e2-aebf-f7344f47483d",
            "actions": [
                {
                    "name": "PauseAndResume",
                    "type": "Button",
                    "id": "8c0258c8-ddbe-4a41-8432-3f2f01bba7d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "082c38d0-8b6c-4a7a-8782-4792bbae1f1e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveMouseVertical",
                    "type": "Value",
                    "id": "db86cecc-6197-4f50-8447-cbb1f8588d37",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveMouseHorizontal",
                    "type": "Value",
                    "id": "dc378776-9f83-44b2-9441-51813e115ae4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "NormalAttack",
                    "type": "Button",
                    "id": "463d87fa-d06d-4914-b96c-109c19105178",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ee9ec9dc-465b-4e34-aaaf-49a316f32c65",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PauseAndResume",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "2ff493b0-2d2d-4c25-b6fb-7fd9492833e6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "72880000-d2ff-4ee2-be1f-9e281d55cc57",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "77cba8b0-2320-42fb-bd21-bca394ae8413",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e338e430-8a50-4a84-93bf-1b156b6de6d2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f69a6a35-a7e7-4517-bbe2-31d25a309083",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Vertical",
                    "id": "591dabee-40b3-4285-8000-775bcfd2b8eb",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveMouseVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e759c2b8-91bb-4ca9-bd28-b87e9ce04b8f",
                    "path": "<Mouse>/delta/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveMouseVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "73c09681-cb0d-4f1d-8796-29eb126d0727",
                    "path": "<Mouse>/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveMouseVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Horizontal",
                    "id": "3a472d65-4914-4cf9-8dc3-1eb97c13ec1d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveMouseHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c5898289-185a-4b04-a4dc-b652633d6d1a",
                    "path": "<Mouse>/delta/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveMouseHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a9352c8e-b14c-49ee-b096-bb518f2f629e",
                    "path": "<Mouse>/delta/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveMouseHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d8b8dccc-9ea1-4556-9333-c63144e77853",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "NormalAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}